remove: dependency on integration tests...for now

--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -91,7 +91,7 @@ jobs:
 
     needs:
       - should-deploy
-      - integration-test
+#      - integration-test
 
     if: needs.should-deploy.outputs.should-run == 'true'
 
